--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -376,7 +376,7 @@
             <item row="2" column="0">
              <widget class="QLabel" name="labelPendingText">
               <property name="text">
-               <string>Pending:</string>
+               <string>Incoming:</string>
               </property>
              </widget>
             </item>
@@ -461,7 +461,7 @@
            <item row="2" column="0">
             <widget class="QLabel" name="labelAnonymizedText">
              <property name="text">
-              <string>Obfuscation Balance:</string>
+              <string>Anonymized Balance:</string>
              </property>
             </widget>
            </item>
