--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -1,5 +1,5 @@
 /****************************************************************************************/
-/*************** [COLOR CODES] DARK PURPLE:#382F44 Replaced with :#d3d3d3 LIGHT PURPLE:#5B4C7C Replaced with:#e3e3e3 *****************/
+/*** [COLOR CODES] DARK PURPLE:#382F44 Replaced with :#d3d3d3 LIGHT PURPLE:#5B4C7C Replaced with:#e3e3e3 ***/
 /****************************************************************************************/
 
 
@@ -102,7 +102,7 @@ background-color:#dedbe5;
 }
 
 QWidget {
-selection-background-color:#e3e3e3; /* #5B4C7C;  Object highlight color */
+selection-background-color:#5B4C7C; /* #e3e3e3;  #5B4C7C;  Object highlight color */
 selection-color:#fff;
 outline:0; /* Remove Annoying Focus Rectangle */
 }
@@ -163,8 +163,9 @@ background-color:#f2f2f2;
 /****************************************************************************************/
 
 QPushButton { /* Global Button Style */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #64ACD2, stop: .1 #d3d3d3, stop: .95 #d3d3d3, stop: 1 #1D80B5);
-border:0;
+/* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #64ACD2, stop: .1 #382f44, stop: .95 #382f44, stop: 1 #1D80B5); */	
+/* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #64ACD2, stop: .1 #d3d3d3, stop: .95 #d3d3d3, stop: 1 #1D80B5); */
+background-color:#d3d3d3;
 border-radius:3px;
 color:#ffffff;
 font-size:12px;
@@ -176,7 +177,9 @@ padding-bottom:5px;
 }
 
 QPushButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f3f3f3, stop: .1 #ebebeb, stop: .95 #ebebeb, stop: 1 #e3e3e3);
+/* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #5B4C9A, stop: .1 #5B4C86, stop: .95 #5B4C86, stop: 1 #5B4C7C); */	
+/* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f3f3f3, stop: .1 #ebebeb, stop: .95 #ebebeb, stop: 1 #e3e3e3); */
+background-color:#ebebeb;
 }
 
 QPushButton:focus {
@@ -201,7 +204,7 @@ background:#f2f2f2;
 }
 
 QComboBox:editable {
-background:#d3d3d3; /* #382F44; */
+background:#382F44; /* #d3d3d3;  #382F44; */
 color:#616161;
 border:0px solid transparent;
 }
@@ -300,7 +303,9 @@ outline:0;
 
 QHeaderView::section { /* Table Header Sections   #d3d3d3;  #382F44;   #5B4C7C #e3e3e3 */
 qproperty-alignment:center;
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #d3d3d3, stop: 1 #e3e3e3);
+/* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #382F44, stop: 1 #5B4C7C); */
+ background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #d3d3d3, stop: 1 #e3e3e3); 
+/* background-color:#d3d3d3; */
 color:#fff;
 min-height:25px;
 font-weight:bold;
@@ -731,7 +736,7 @@ min-height:25px;
 min-width:180px;
 }
 
-QDialog#RPCConsole QWidget#tab_peers QLabel#peerHeading { /* Peers Info Header  :#382f44 Replaced */
+QDialog#RPCConsole QWidget#tab_peers QLabel#peerHeading { /* Peers Info Header  color:#382f44 Replaced with :#d3d3d3 */
 color:#d3d3d3;
 }
 
@@ -807,10 +812,10 @@ font-weight:normal;
 min-height:30px;
 }
 
-QWidget .QFrame#frame .QLabel#label_5 { /* Wallet Label */
+QWidget .QFrame#frame .QLabel#label_5 { /* Wallet Balances Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:transparent;
+background-color:#d3d3d3; /* transparent; */
 color:#fff;
 margin-right:5px;
 padding-right:5px;
@@ -940,7 +945,7 @@ qproperty-geometry: rect(10 0 431 35);
 QWidget .QFrame#frameObfuscation .QLabel#label_2 { /* Obfuscation Header */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#5b5b5b; /* #5B4C7C; */
+background-color:#d3d3d3;/* #5b5b5b;  #5B4C7C; */
 color:#fff;
 margin-right:5px;
 padding-right:5px;
@@ -1482,7 +1487,7 @@ background-color:#fff;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_2 { /* Label Label */
-background-color:#e3e3e3; /* #5B4C7C; */
+background-color:#5B4C7C; /* #e3e3e3; #5B4C7C; */
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1500,7 +1505,7 @@ padding-right:5px;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_3 { /* Message Label */
-background-color:#5B4C7C;
+background-color:#5B4C7C; /* #e3e3e3; #5B4C7C; */
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1560,7 +1565,7 @@ border:1px solid #9e9e9e;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 { /* Requested Payments History Label */
-color:#d3d3d3; /* #382f44; */
+color:#5B4C7C; /* #d3d3d3;  #382f44; */
 font-weight:bold;
 font-size:14px;
 }
@@ -1607,7 +1612,7 @@ border:1px solid #333;
 }
 
 QCalendarWidget QWidget#qt_calendar_navigationbar { /* Calendar widget navigation bar */
-background-color:#e3e3e3; /* #5B4C7C; */
+background-color:#5B4C7C; /* #e3e3e3;  #5B4C7C; */
 font-weight:bold;
 }
 
