--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -46,14 +46,14 @@ color:#333;
 }
 
 QToolBar {
-background-color:#d3d3d3; /* #382F44; */
+background-color:#c3c3c3; /* #d3d3d3;  #382F44; */
 border:0px solid #000;
 padding:0;
 margin:0;
 }
 
 QToolBar > QToolButton {
-background-color:##d3d3d3; /* #382F44; */
+background-color:#d3d3d3; /* #382F44; */
 border:0px solid #333;
 min-height:2.5em;
 padding: 0em 1em;
@@ -165,7 +165,7 @@ background-color:#f2f2f2;
 QPushButton { /* Global Button Style */
 /* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #64ACD2, stop: .1 #382f44, stop: .95 #382f44, stop: 1 #1D80B5); */	
 /* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #64ACD2, stop: .1 #d3d3d3, stop: .95 #d3d3d3, stop: 1 #1D80B5); */
-background-color:#d3d3d3;
+background-color:#c3c3c3; /* #d3d3d3; */
 border-radius:3px;
 color:#ffffff;
 font-size:12px;
@@ -1125,6 +1125,7 @@ border:1px solid #9e9e9e;
 
 QWidget .QFrame#frame_2 { /* Transactions Widget */
 min-width:410px;
+min-height:100px; /* Added on Dec-10-2017. */
 margin-right:20px;
 margin-left:0;
 margin-top:0;
