--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -304,7 +304,7 @@ outline:0;
 QHeaderView::section { /* Table Header Sections   #d3d3d3;  #382F44;   #5B4C7C #e3e3e3 */
 qproperty-alignment:center;
 /* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #382F44, stop: 1 #5B4C7C); */
- background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #d3d3d3, stop: 1 #e3e3e3); 
+ background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #bebebe, stop: 1 #c3c3c3); 
 /* background-color:#d3d3d3; */
 color:#fff;
 min-height:25px;
@@ -841,7 +841,7 @@ margin-left:16px;
 QWidget .QFrame#frame .QLabel#labelBalanceText { /* Available Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#e3e3e3; /* #5b5b5b;  #5B4C7C; */
+background-color:transparent; /* #e3e3e3;  #5b5b5b;  #5B4C7C; */
 color:#fff;
 margin-right:5px;
 padding-right:5px;
@@ -1301,7 +1301,7 @@ min-height:27px;
 /**************************** SEND COINS ENTRY ******************************************/
 
 QStackedWidget#SendCoinsEntry .QFrame#SendCoins > .QLabel { /* Send Coin Entry Labels */
-background-color:#e3e3e3; /* #5B4C7C; */
+background-color:#c3c3c3; /* #e3e3e3;  #5B4C7C; */
 min-width:102px;
 font-weight:bold;
 font-size:11px;
@@ -1448,7 +1448,7 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item {
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:selected { /* Coin Control Item (selected) */
-background-color:#5B4C7C;
+background-color:#c3c3c3; /* #5B4C7C; */
 color:#fff;
 }
 
@@ -1488,7 +1488,7 @@ background-color:#fff;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_2 { /* Label Label */
-background-color:#5B4C7C; /* #e3e3e3; #5B4C7C; */
+background-color:#c3c3c3; /* #e3e3e3; #5B4C7C; */
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1506,7 +1506,7 @@ padding-right:5px;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_3 { /* Message Label */
-background-color:#5B4C7C; /* #e3e3e3; #5B4C7C; */
+background-color:#c3c3c3; /* #e3e3e3; #5B4C7C; */
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1566,7 +1566,7 @@ border:1px solid #9e9e9e;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 { /* Requested Payments History Label */
-color:#5B4C7C; /* #d3d3d3;  #382f44; */
+color:#c3c3c3; /* #5B4C7C;  #d3d3d3;  #382f44; */
 font-weight:bold;
 font-size:14px;
 }
@@ -1613,7 +1613,7 @@ border:1px solid #333;
 }
 
 QCalendarWidget QWidget#qt_calendar_navigationbar { /* Calendar widget navigation bar */
-background-color:#5B4C7C; /* #e3e3e3;  #5B4C7C; */
+background-color:#c3c3c3; /* #5B4C7C;  #e3e3e3;  #5B4C7C; */
 font-weight:bold;
 }
 
